# docsify

./: package-lock.json  package.json
src/: App.css  App.tsx  Routes.tsx  index.css  main.tsx
src-rust/: Cargo.toml
src-rust/src/: main.rs
src-rust/src/components/: api.rs  mod.rs  userchat.rs  websocket.rs
src-rust/src/structs/: aichat.rs  mod.rs
src/Routes/: Routes.tsx
src/components/: QuillEditor.tsx  SessionPage.tsx  VideoConference.tsx
src/components/Chat/: AiChat.tsx  Chat.tsx
src/components/Quill/: QuillEditor.tsx
src/components/Video/: VideoConference.tsx
src/components/VideoConference/: VideoConference.tsx
src/components/css/: AiChat.css  Chat.css  SessionPage.css
